Fix: Corrected issues with account-forms where labels would be visible and move to the center when text-centered. Labels no longer displayed as these are generated by all auth forms.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -58,6 +58,15 @@
     width: 100%;
 }
 
+.account-form label {
+    display: none;
+}
+
+.account-form .textinput {
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
 .account-form i {
     font-size: 10rem;
     text-align: center;
